--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -18,9 +18,9 @@ map alt+enter     toggle_fullscreen
 map ctrl+shift+t  new_tab_with_cwd
 
 # Fonts
-# font_family         JetBrains Mono
-# bold_font           JetBrains Mono Bold
-font_family      Berkeley Mono Variable Regular
-bold_font        Berkeley Mono Variable Bold
-italic_font      Berkeley Mono Variable Italic
+font_family         JetBrains Mono
+bold_font           JetBrains Mono Bold
+# font_family      Berkeley Mono Variable Regular
+# bold_font        Berkeley Mono Variable Bold
+# italic_font      Berkeley Mono Variable Italic
 font_size        12.5
