--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -13,31 +13,6 @@ bind C-Space send-prefix
 bind -n M-H previous-window
 bind -n M-L next-window
 
-# set -g @catppuccin_flavour 'mocha'
-# set -g @catppuccin_window_left_separator "█"
-# set -g @catppuccin_window_right_separator "█ "
-# set -g @catppuccin_window_number_position "right"
-# set -g @catppuccin_window_middle_separator "  █"
-#
-# set -g @catppuccin_window_default_fill "number"
-#
-# set -g @catppuccin_window_current_fill "number"
-# set -g @catppuccin_window_current_text "#W"
-#
-# set -g @catppuccin_status_modules_right "application session"
-# set -g @catppuccin_status_left_separator  ""
-# set -g @catppuccin_status_right_separator " "
-# set -g @catppuccin_status_fill "all"
-# set -g @catppuccin_status_connect_separator "yes"
-
-# set -g @tokyo-night-tmux_show_datetime 0
-# set -g @tokyo-night-tmux_show_path 1
-# set -g @tokyo-night-tmux_path_format relative
-# set -g @tokyo-night-tmux_window_id_style dsquare
-# set -g @tokyo-night-tmux_window_id_style dsquare
-# set -g @tokyo-night-tmux_show_git 0
-
-
 # Open panes in current directory
 bind '"' split-window -v -c "#{pane_current_path}"
 bind % split-window -h -c "#{pane_current_path}"
@@ -52,11 +27,18 @@ set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'christoomey/vim-tmux-navigator'
-set -g @plugin 'catppuccin/tmux'
-# set -g @plugin "janoamaral/tokyo-night-tmux"
+# set -g @plugin 'catppuccin/tmux'
+set -g @plugin "janoamaral/tokyo-night-tmux"
+
+# Configure tokyo-night-tmux
+set -g @tokyo-night-tmux_show_datetime 0
+set -g @tokyo-night-tmux_show_path 0
+set -g @tokyo-night-tmux_window_id_style dsquare
+set -g @tokyo-night-tmux_show_git 1
 
 # Set vi-mode
 set-window-option -g mode-keys vi
+
 # keybindings
 bind-key -T copy-mode-vi v send-keys -X begin-selection
 bind-key -T copy-mode-vi C-v send-keys -X rectangle-toggle
