--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,3 +1,21 @@
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'tmux-plugins/tmux-yank'
+set -g @plugin "janoamaral/tokyo-night-tmux"
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'omerxx/tmux-sessionx'
+set -g @plugin 'christoomey/vim-tmux-navigator'
+set -g @plugin 'olimorris/tmux-pomodoro-plus'
+
+# Configure tokyo-night-tmux
+set -g @tokyo-night-tmux_show_datetime 0
+set -g @tokyo-night-tmux_show_path 0
+set -g @tokyo-night-tmux_window_id_style dsquare
+set -g @tokyo-night-tmux_show_git 0
+
+# Configs for tmux-pomodoro-plus
+set -g status-right "#{pomodoro_status}"
+
 # Display true colors in neovim
 set-option -sa terminal-overrides ",xterm*:Tc"
 
@@ -22,19 +40,6 @@ set -g base-index 1
 set -g pane-base-index 1
 set-window-option -g pane-base-index 1
 set-option -g renumber-windows on
-
-set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'tmux-plugins/tmux-sensible'
-set -g @plugin 'tmux-plugins/tmux-yank'
-set -g @plugin 'christoomey/vim-tmux-navigator'
-# set -g @plugin 'catppuccin/tmux'
-set -g @plugin "janoamaral/tokyo-night-tmux"
-
-# Configure tokyo-night-tmux
-set -g @tokyo-night-tmux_show_datetime 0
-set -g @tokyo-night-tmux_show_path 0
-set -g @tokyo-night-tmux_window_id_style dsquare
-set -g @tokyo-night-tmux_show_git 1
 
 # Set vi-mode
 set-window-option -g mode-keys vi
