--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -7,6 +7,9 @@ set -g @plugin 'omerxx/tmux-sessionx'
 set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'olimorris/tmux-pomodoro-plus'
 
+# tmux-resurrect save dir
+set -g @resurrect-dir '$HOME/.tmux/resurrect'
+
 # Configure tokyo-night-tmux
 set -g @tokyo-night-tmux_show_datetime 0
 set -g @tokyo-night-tmux_show_path 0
