kitty: set italic fonts

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -24,6 +24,7 @@ map ctrl+shift+t  new_tab_with_cwd
 # Fonts
 font_family         JetBrains Mono
 bold_font           JetBrains Mono Bold
+italic_font         JetBrains Mono Italic
 # font_family      Berkeley Mono Variable Regular
 # bold_font        Berkeley Mono Variable Bold
 # italic_font      Berkeley Mono Variable Italic
