kitty: tweak the opacity

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -15,6 +15,7 @@ linux_display_server x11
 # hide_window_decorations yes
 # window_border_width 0
 # draw_minimal_borders yes
+background_opacity 0.95
 
 # Mappings
 # =============================
@@ -25,7 +26,8 @@ map ctrl+shift+t  new_tab_with_cwd
 font_family         JetBrains Mono
 bold_font           JetBrains Mono Bold
 italic_font         JetBrains Mono Italic
+font_size           12.0
 # font_family      Berkeley Mono Variable Regular
 # bold_font        Berkeley Mono Variable Bold
 # italic_font      Berkeley Mono Variable Italic
-font_size        12.5
+# font_size        14.0
