kitty: change the mappings
- remove fullscreen mapping
- change the mapping for opening new window (or is it a panel ?!?)

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -19,8 +19,8 @@ background_opacity 0.95
 
 # Mappings
 # =============================
-map alt+enter     toggle_fullscreen
 map ctrl+shift+t  new_tab_with_cwd
+map ctrl+shift+enter  launch --cwd=current
 
 # Fonts
 font_family         JetBrains Mono
