--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -2,13 +2,13 @@ set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin "janoamaral/tokyo-night-tmux"
-set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'omerxx/tmux-sessionx'
 set -g @plugin 'christoomey/vim-tmux-navigator'
-set -g @plugin 'olimorris/tmux-pomodoro-plus'
+# set -g @plugin 'tmux-plugins/tmux-resurrect'
+# set -g @plugin 'olimorris/tmux-pomodoro-plus'
 
 # tmux-resurrect save dir
-set -g @resurrect-dir '$HOME/.tmux/resurrect'
+# set -g @resurrect-dir '$HOME/.tmux/resurrect'
 
 # Configure tokyo-night-tmux
 set -g @tokyo-night-tmux_show_datetime 0
@@ -17,7 +17,7 @@ set -g @tokyo-night-tmux_window_id_style dsquare
 set -g @tokyo-night-tmux_show_git 0
 
 # Configs for tmux-pomodoro-plus
-set -g status-right "#{pomodoro_status}"
+# set -g status-right "#{pomodoro_status}"
 
 # Display true colors in neovim
 set-option -sa terminal-overrides ",xterm*:Tc"
@@ -27,8 +27,8 @@ set -g mouse on
 
 # Set prefix
 unbind C-b
-set -g prefix C-Space
-bind C-Space send-prefix
+set -g prefix M-Space
+bind M-Space send-prefix
 
 # Shift+Alt vim keys to switch windows (buffers)
 bind -n M-H previous-window
