feat: add twilight to nvim & integrate with kitty

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -31,3 +31,7 @@ font_size           12.0
 # bold_font        Berkeley Mono Variable Bold
 # italic_font      Berkeley Mono Variable Italic
 # font_size        14.0
+
+# zen-mode from nvim
+allow_remote_control socket-only
+listen_on unix:/tmp/kitty
