feat: add kitty-navigator
It's similar to the `tmux-navigator` plugin and since I rarely use
`tmux` because of the functionalities of `kitty` (splits, windows,
panes) I might remove `tmux` to my configs.

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -33,5 +33,11 @@ font_size           12.0
 # font_size        14.0
 
 # zen-mode from nvim
-allow_remote_control socket-only
+allow_remote_control yes
 listen_on unix:/tmp/kitty
+
+# Kitty navigator
+map ctrl+j kitten pass_keys.py neighboring_window bottom ctrl+j
+map ctrl+k kitten pass_keys.py neighboring_window top    ctrl+k
+map ctrl+h kitten pass_keys.py neighboring_window left   ctrl+h
+map ctrl+l kitten pass_keys.py neighboring_window right  ctrl+l
