--- a/ohmyposh/config.toml
+++ b/ohmyposh/config.toml
@@ -24,26 +24,15 @@ console_title_template = '{{ .Shell }} in {{ .Folder }}'
     style = 'plain'
     foreground = 'p:grey'
     background = 'transparent'
-    template = ' {{ .HEAD }}{{ if or (.Working.Changed) (.Staging.Changed) }}*{{ end }} <cyan>{{ if gt .Behind 0 }}⇣{{ end }}{{ if gt .Ahead 0 }}⇡{{ end }}</>'
+    template = ' {{ .HEAD }}{{ if .Working.Changed }}  {{ .Working.String }}{{ end }}{{ if and (.Working.Changed) (.Staging.Changed) }} |{{ end }}{{ if .Staging.Changed }}  {{ .Staging.String }}{{ end }}{{ if gt .StashCount 0 }}  {{ .StashCount }}{{ end }} '
 
     [blocks.segments.properties]
       branch_icon = ''
       commit_icon = '@'
       fetch_status = true
-
-# [[blocks]]
-#   type = 'rprompt'
-#   overflow = 'hidden'
-#
-#   [[blocks.segments]]
-#     type = 'executiontime'
-#     style = 'plain'
-#     foreground = 'yellow'
-#     background = 'transparent'
-#     template = '{{ .FormattedMs }}'
-#
-#     [blocks.segments.properties]
-#       threshold = 5000
+      branch_max_length = 25
+      fetch_stash_count = true
+      fetch_upstream_icon = true
 
 [[blocks]]
   type = 'prompt'
