--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -15,7 +15,7 @@ linux_display_server x11
 # hide_window_decorations yes
 # window_border_width 0
 # draw_minimal_borders yes
-background_opacity 0.95
+# background_opacity 0.95
 
 # Mappings
 # =============================
@@ -27,10 +27,10 @@ font_family         JetBrains Mono
 bold_font           JetBrains Mono Bold
 italic_font         JetBrains Mono Italic
 font_size           12.0
-# font_family      Berkeley Mono Variable Regular
+# font_family      Berkeley Mono Variable
 # bold_font        Berkeley Mono Variable Bold
 # italic_font      Berkeley Mono Variable Italic
-# font_size        14.0
+# font_size        13.0
 
 # zen-mode from nvim
 allow_remote_control yes
