--- a/lazydocker/config.yml
+++ b/lazydocker/config.yml
@@ -1,3 +1,5 @@
+# yaml-language-server: $schema=https://json.schemastore.org/lazydocker.json
+
 gui:
   theme:
     activeBorderColor:
@@ -9,6 +11,7 @@ gui:
       - "#82aaff"
     selectedLineBgColor:
       - "#2d3f76"
+
 stats:
   graphs:
     - caption: CPU (%)
