--- a/hypr/UserConfigs/ENVariables.conf
+++ b/hypr/UserConfigs/ENVariables.conf
@@ -4,6 +4,8 @@
 # Set your defaults here
 env = EDITOR,nvim #default editor
 
+env = WAYLAND_DISPLAY,wayland-1
+
 #environment-variables
 env = CLUTTER_BACKEND,wayland
 env = GDK_BACKEND,wayland,x11
