--- a/hypr/hypridle.conf
+++ b/hypr/hypridle.conf
@@ -1,6 +1,6 @@
 general {
   lock_cmd = pidof hyprlock || hyprlock # runs hyprlock if it is not already running (this is always run when "loginctl lock-session" is called) 
-  before_sleep_cmd = loginctl lock-session    # ensures that the session is locked before going to sleep
+  before_sleep_cmd = hyprlock    # ensures that the session is locked before going to sleep
   after_sleep_cmd = hyprctl dispatch dpms on # turn of screen after sleep (not strictly necessary, but just in case)
   ignore_dbus_inhibit = false             # whether to ignore dbus-sent idle-inhibit requests (used by e.g. firefox or steam)
 }
@@ -15,7 +15,7 @@ listener {
 # NOTE: Screenlock
 listener {
     timeout = 600                     # 10 min
-    on-timeout = loginctl lock-session # command to run when timeout has passed
+    on-timeout = hyprlock # command to run when timeout has passed
     on-resume = notify-send "Welcome back to your desktop!"  # command to run when activity is detected after timeout has fired.
 }
 
