--- a/waybar/config.jsonc
+++ b/waybar/config.jsonc
@@ -92,8 +92,8 @@
       " ",
       " ",
       " "
-    ],
-    "max-length": 25
+    ]
+    // "max-length": 25
   },
   "pulseaudio": {
     // "scroll-step": 1, // %, can be a float
