--- a/hypr/UserConfigs/WindowRules.conf
+++ b/hypr/UserConfigs/WindowRules.conf
@@ -31,7 +31,7 @@ windowrulev2 = workspace 2, class:^([Ff]irefox|org.mozilla.firefox|[Ff]irefox-es
 windowrulev2 = workspace 2, class:^([Mm]icrosoft-edge(-stable|-beta|-dev|-unstable)?)$
 windowrulev2 = workspace 2, class:^([Gg]oogle-chrome(-beta|-dev|-unstable)?)$
 #windowrulev2 = workspace 3, class:^([Tt]hunar)$
-windowrulev2 = workspace 4, class:^(com.obsproject.Studio)$
+# windowrulev2 = workspace 4, class:^(com.obsproject.Studio)$
 windowrulev2 = workspace 5, class:^([Ss]team)$
 windowrulev2 = workspace 5, class:^([Ll]utris)$
 windowrulev2 = workspace 7, class:^([Dd]iscord|[Ww]ebCord|[Vv]esktop)$
@@ -89,7 +89,7 @@ windowrulev2 = opacity 0.95 0.9, class:^(Alacritty|kitty|kitty-dropterm|ghostty)
 windowrulev2 = opacity 0.9 0.7, class:^(VSCodium|codium-url-handler)$
 windowrulev2 = opacity 0.9 0.8, class:^(nwg-look|qt5ct|qt6ct|[Yy]ad)$
 windowrulev2 = opacity 0.9 0.8, title:(Kvantum Manager)
-windowrulev2 = opacity 0.9 0.7, class:^(com.obsproject.Studio)$
+# windowrulev2 = opacity 0.9 0.7, class:^(com.obsproject.Studio)$
 windowrulev2 = opacity 0.9 0.7, class:^([Aa]udacious)$
 windowrulev2 = opacity 0.9 0.8, class:^(VSCode|code-url-handler)$
 windowrulev2 = opacity 0.9 0.8, class:^(jetbrains-.+)$ # JetBrains IDEs
