hypr: add keybind for toggling waybar

--- a/hypr/configs/Keybinds.conf
+++ b/hypr/configs/Keybinds.conf
@@ -13,7 +13,6 @@ $UserScripts = $HOME/.config/hypr/UserScripts
 # bind = CTRL ALT, Delete, exec, hyprctl dispatch exit 0
 bind = $mainMod, Q, killactive,
 bind = $mainMod, F, fullscreen 
-# bind = $mainMod SHIFT, Q, exec, $scriptsDir/KillActiveProcess.sh
 bind = $mainMod SHIFT, F, togglefloating,
 bind = $mainMod ALT, F, exec, hyprctl dispatch workspaceopt allfloat
 bind = CTRL ALT, L, exec, $scriptsDir/LockScreen.sh
@@ -39,7 +38,7 @@ bind = $mainMod ALT, E, exec, $scriptsDir/RofiEmoji.sh # emoji
 # bind = $mainMod ALT, O, exec, hyprctl setprop active opaque toggle #disable opacity to active window
 
 # TODO: Waybar / Bar related
-# bind = $mainMod, B, exec, pkill -SIGUSR1 waybar # Toggle hide/show waybar 
+bind = $mainMod, B, exec, pkill -SIGUSR1 waybar # Toggle hide/show waybar 
 # bind = $mainMod CTRL, B, exec, $scriptsDir/WaybarStyles.sh # Waybar Styles Menu
 # bind = $mainMod ALT, B, exec, $scriptsDir/WaybarLayout.sh # Waybar Layout Menu
 
@@ -61,12 +60,12 @@ bind = ALT, tab, cyclenext
 bind = ALT, tab, bringactivetotop  
 
 # TODO: Special Keys / Hot Keys
-bindel = , xf86audioraisevolume, exec, $scriptsDir/Volume.sh --inc #volume up
-bindel = , xf86audiolowervolume, exec, $scriptsDir/Volume.sh --dec #volume down
+bindel = ,xf86audioraisevolume, exec, $scriptsDir/Volume.sh --inc #volume up
+bindel = ,xf86audiolowervolume, exec, $scriptsDir/Volume.sh --dec #volume down
 bindel = ,XF86AudioMicMute, exec, $scriptsDir/Volume.sh --toggle-mic #mute mic
-bindl = , xf86audiomute, exec, $scriptsDir/Volume.sh --toggle
-bindl = , xf86Sleep, exec, systemctl suspend  # sleep button 
-bindl = , xf86Rfkill, exec, $scriptsDir/AirplaneMode.sh #Airplane mode
+bindl = ,xf86audiomute, exec, $scriptsDir/Volume.sh --toggle
+bindl = ,xf86Sleep, exec, systemctl suspend  # sleep button 
+bindl = ,xf86Rfkill, exec, $scriptsDir/AirplaneMode.sh #Airplane mode
 bindel = ,XF86MonBrightnessUp, exec, brightnessctl s 10%+
 bindel = ,XF86MonBrightnessDown, exec, brightnessctl s 10%-
 
