--- a/bat/config
+++ b/bat/config
@@ -1,1 +1,3 @@
-/nix/store/23qck0jbjzx14qqdvxbajjb1ii8n8m0q-home-manager-files/.config/bat/config
+--theme="Catppuccin Mocha"
+--style="numbers,changes,grid"
+--paging=auto
