--- a/hypr/UserConfigs/Monitors.conf
+++ b/hypr/UserConfigs/Monitors.conf
@@ -11,8 +11,8 @@
 # Monitors
 # NOTE: for normal sized screen
 # monitor = eDP-1, disable
-monitor = eDP-1, 1920x1080@60, auto-right, 1
-monitor = DP-2, preferred, 0x0, 1
+monitor = eDP-1, 1920x1080@60, 0x0, 1
+monitor = DP-2, preferred, auto-right, 1
 
 # NOTE: for the big ass screen on the reunion room
 # monitor = DP-2, 1920x1080@60, 0x0, 1
