--- a/hypr/configs/Keybinds.conf
+++ b/hypr/configs/Keybinds.conf
@@ -20,12 +20,12 @@ bind = CTRL ALT, P, exec, $scriptsDir/Wlogout.sh
 
 # TODO: FEATURES / EXTRAS
 bind = $mainMod ALT, E, exec, $scriptsDir/RofiEmoji.sh # emoji
+bind = $mainMod ALT, L, exec, $scriptsDir/ChangeLayout.sh # Toggle Master or Dwindle Layout
 # bind = $mainMod, H, exec, $scriptsDir/KeyHints.sh # Small help file
 # bind = $mainMod ALT, R, exec, $scriptsDir/Refresh.sh # Refresh waybar, swaync, rofi
 # bind = $mainMod, S, exec, $scriptsDir/RofiSearch.sh # Google search from Rofi
 # bind = $mainMod SHIFT, B, exec, $scriptsDir/ChangeBlur.sh # Toggle blur settings 
 # bind = $mainMod SHIFT, G, exec, $scriptsDir/GameMode.sh # animations ON/OFF
-# bind = $mainMod ALT, L, exec, $scriptsDir/ChangeLayout.sh # Toggle Master or Dwindle Layout
 # bind = $mainMod ALT, V, exec, $scriptsDir/ClipManager.sh # Clipboard Manager
 # bind = $mainMod SHIFT, N, exec, swaync-client -t -sw # swayNC panel
 
