hypr: better init the hypridle daemon

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -1,11 +1,14 @@
-# Sourcing external config files
-exec-once = hyprctl setcursor "Banana-Catppuccin-Mocha" 72
-exec = gsettings set org.gnome.desktop.interface cursor-theme "Banana-Catppuccin-Mocha"
-exec = gsettings set org.gnome.desktop.interface cursor-size 72
+exec-once = hyprctl setcursor "Banana-Catppuccin-Mocha" 72 &
+# exec = gsettings set org.gnome.desktop.interface color-scheme "prefer-dark" &
+exec = gsettings set org.gnome.desktop.interface cursor-theme "Banana-Catppuccin-Mocha" &
+exec = gsettings set org.gnome.desktop.interface cursor-size 72 &
+
+# exec-once = hypridle &
 
 # Default Configs
 $configs = $HOME/.config/hypr/configs
 
+# Sourcing external config files
 source=$configs/Settings.conf
 source=$configs/Keybinds.conf
 
@@ -22,3 +25,5 @@ source= $UserConfigs/UserDecorAnimations.conf
 source= $UserConfigs/UserKeybinds.conf
 source= $UserConfigs/UserSettings.conf
 source= $UserConfigs/WorkspaceRules.conf
+
+# vim:ft=hyprlang
