--- a/hypr/UserConfigs/Startup_Apps.conf
+++ b/hypr/UserConfigs/Startup_Apps.conf
@@ -12,8 +12,8 @@ exec-once = swww-daemon --format xrgb
 #exec-once = $SwwwRandom $wallDIR # random wallpaper switcher every 30 minutes 
 
 # Startup
-# exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
-# exec-once = systemctl --user import-environment WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
+exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
+exec-once = systemctl --user import-environment WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 
 # Polkit (Polkit Gnome / KDE)
 # exec-once = $scriptsDir/Polkit.sh
@@ -29,6 +29,9 @@ exec-once = ags &
 # exec-once = wl-paste --type text --watch cliphist store 
 # exec-once = wl-paste --type image --watch cliphist store
 
+# Starting hypridle to start hyprlock
+exec-once = hypridle &
+
 # TODO: Start pyprland daemon
 # exec-once = pypr &
 
@@ -37,3 +40,5 @@ exec-once = ags &
 
 # xdg-desktop-portal-hyprland (should be auto starting. However, you can force to start)
 # exec-once = $scriptsDir/PortalHyprland.sh
+
+# vim:ft=hyprlang
