--- a/hypr/hypridle.conf
+++ b/hypr/hypridle.conf
@@ -1,34 +1,29 @@
 general {
-  lock_cmd = pidof hyprlock || hyprlock # runs hyprlock if it is not already running (this is always run when "loginctl lock-session" is called) 
-  before_sleep_cmd = hyprlock    # ensures that the session is locked before going to sleep
-  after_sleep_cmd = hyprctl dispatch dpms on # turn of screen after sleep (not strictly necessary, but just in case)
-  ignore_dbus_inhibit = false             # whether to ignore dbus-sent idle-inhibit requests (used by e.g. firefox or steam)
+  lock_cmd = pidof hyprlock || hyprlock       # avoid starting multiple hyprlock instances.
+  before_sleep_cmd = loginctl lock-session    # lock before suspend.
+  after_sleep_cmd = hyprctl dispatch dpms on  # to avoid having to press a key twice to turn on the display.
 }
 
-# NOTE: Warn
 listener {
-  timeout = 540                            # 9 min
-  on-timeout = notify-send "You are idle!" # command to run when timeout has passed
-  on-resume = notify-send "Welcome back!"  # command to run when activity is detected after timeout has fired.
+  timeout = 150                                # 2.5min.
+  on-timeout = brightnessctl -s set 10         # set monitor backlight to minimum, avoid 0 on OLED monitor.
+  on-resume = brightnessctl -r                 # monitor backlight restore.
 }
 
-# NOTE: Screenlock
 listener {
-    timeout = 600                     # 10 min
-    on-timeout = hyprlock # command to run when timeout has passed
-    on-resume = notify-send "Welcome back to your desktop!"  # command to run when activity is detected after timeout has fired.
+  timeout = 300                                 # 5min
+  on-timeout = loginctl lock-session            # lock screen when timeout has passed
 }
 
-# NOTE: Turn off screen (disabled by default)
-# listener {
-#   timeout = 630                            # 10.5 min
-#   on-timeout = hyprctl dispatch dpms off  # command to run when timeout has passed
-#   on-resume = hyprctl dispatch dpms on    # command to run when activity is detected after timeout has fired.
-# }
+listener {
+  timeout = 330                                                     # 5.5min
+  on-timeout = hyprctl dispatch dpms off                            # screen off when timeout has passed
+  on-resume = hyprctl dispatch dpms on && brightnessctl -r          # screen on when activity is detected after timeout has fired.
+}
 
-# NOTE: Suspend # disabled by default
-# listener {
-#   timeout = 1200                            # 20 min
-#   on-timeout = systemctl suspend # command to run when timeout has passed
-#   on-resume = notify-send "Welcome back to your desktop!"  # command to run when activity is detected after timeout has fired.
-# }
+listener {
+  timeout = 1800                                # 30min
+  on-timeout = systemctl suspend                # suspend pc
+}
+
+# vim:ft=hyprlang
