--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,7 +1,7 @@
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-yank'
-set -g @plugin "janoamaral/tokyo-night-tmux"
+set -g @plugin 'janoamaral/tokyo-night-tmux'
 set -g @plugin 'omerxx/tmux-sessionx'
 set -g @plugin 'christoomey/vim-tmux-navigator'
 # set -g @plugin 'tmux-plugins/tmux-resurrect'
