hypr: add some nice scripts

--- a/hypr/UserConfigs/Startup_Apps.conf
+++ b/hypr/UserConfigs/Startup_Apps.conf
@@ -18,6 +18,9 @@ exec-once = systemctl --user import-environment WAYLAND_DISPLAY XDG_CURRENT_DESK
 # Polkit (Polkit Gnome / KDE)
 # exec-once = $scriptsDir/Polkit.sh
 
+# NOTE: Battery notification
+# exec-once = $scriptsDir/LowBatteryNotify.sh
+
 # starup apps
 exec-once = waybar &
 exec-once = nm-applet --indicator &
@@ -26,8 +29,9 @@ exec-once = ags &
 # exec-once = blueman-applet & 
 
 # TODO: clipboard manager
-# exec-once = wl-paste --type text --watch cliphist store 
-# exec-once = wl-paste --type image --watch cliphist store
+exec-once = rm "$HOME/.cache/cliphist/db"
+exec-once = wl-paste --type text --watch cliphist store 
+exec-once = wl-paste --type image --watch cliphist store
 
 # Starting hypridle to start hyprlock
 exec-once = hypridle &
