--- a/hypr/UserConfigs/UserKeybinds.conf
+++ b/hypr/UserConfigs/UserKeybinds.conf
@@ -11,8 +11,11 @@ $term = kitty
 $files = nautilus
 $browser = brave
 $notes = obsidian
-$menu = rofi -show drun -show-icons
-$httpie = httpie-desktop --enable-features=UseOzonePlatform,WaylandWindowDecorations --ozone-platform-hint=auto
+# $menu = rofi -show drun -show-icons
+$menu = tofi-drun -c ~/.config/tofi/configA --drun-launch=true
+$colorPicker = hyprpicker
+$restClient = httpie-desktop --enable-features=UseOzonePlatform,WaylandWindowDecorations --ozone-platform-hint=auto
+$discord = discord
 
 # rofi App launcher
 bind = $mainMod, D, exec, $menu
@@ -24,7 +27,9 @@ bind = $mainMod, Return, exec, $term
 bind = $mainMod, T, exec, $files
 bind = $mainMod, O, exec, $browser
 bind = $mainMod, N, exec, $notes
-bind = $mainMod, M, exec, $httpie
+bind = $mainMod, M, exec, $restClient
+bind = $mainMod, P, exec, $colorPicker | wl-copy
+bind = $mainMod, I, exec, $discord
 
 # bind = $mainMod ALT, C, exec, $UserScripts/RofiCalc.sh # calculator (qalculate)
 
