--- a/hypr/UserConfigs/WindowRules.conf
+++ b/hypr/UserConfigs/WindowRules.conf
@@ -18,6 +18,7 @@ windowrulev2 = center, class:([Tt]hunar), title:(Confirm to replace files)
 windowrulev2 = center, title:^(ROG Control)$
 windowrulev2 = center, title:^(Keybindings)$  
 windowrulev2 = move 72% 7%,title:^(Picture-in-Picture)$ 
+# windowrulev2 = move 50% 50%, title:(Network Displays)
 #windowrulev2 = move 72% 7%,title:^(Firefox)$ 
 
 # windowrule v2 to avoid idle for fullscreen apps
@@ -34,7 +35,7 @@ windowrulev2 = workspace 2, class:^([Gg]oogle-chrome(-beta|-dev|-unstable)?)$
 # windowrulev2 = workspace 4, class:^(com.obsproject.Studio)$
 windowrulev2 = workspace 5, class:^([Ss]team)$
 windowrulev2 = workspace 5, class:^([Ll]utris)$
-windowrulev2 = workspace 7, class:^([Dd]iscord|[Ww]ebCord|[Vv]esktop)$
+# windowrulev2 = workspace 7, class:^([Dd]iscord|[Ww]ebCord|[Vv]esktop)$
 windowrulev2 = workspace 7, class:^([Ff]erdium)$
 windowrulev2 = workspace 7, class:^([Ww]hatsapp-for-linux)$
 
@@ -43,6 +44,7 @@ windowrulev2 = workspace 6 silent, class:^(virt-manager)$
 windowrulev2 = workspace 9 silent, class:^([Aa]udacious)$
 
 # windowrule v2 - float
+# windowrule = float, title:(Network Displays)
 windowrulev2 = float, class:^(org.kde.polkit-kde-authentication-agent-1)$ 
 windowrulev2 = float, class:([Zz]oom|onedriver|onedriver-launcher)$
 windowrulev2 = float, class:([Tt]hunar), title:(File Operation Progress)
@@ -93,7 +95,7 @@ windowrulev2 = opacity 0.9 0.8, title:(Kvantum Manager)
 windowrulev2 = opacity 0.9 0.7, class:^([Aa]udacious)$
 windowrulev2 = opacity 0.9 0.8, class:^(VSCode|code-url-handler)$
 windowrulev2 = opacity 0.9 0.8, class:^(jetbrains-.+)$ # JetBrains IDEs
-windowrulev2 = opacity 0.94 0.86, class:^([Dd]iscord|[Vv]esktop)$
+# windowrulev2 = opacity 0.94 0.86, class:^([Dd]iscord|[Vv]esktop)$
 windowrulev2 = opacity 0.9 0.8, class:^(org.telegram.desktop|io.github.tdesktop_x64.TDesktop)$
 windowrulev2 = opacity 0.9 0.8, class:^(im.riot.Riot)$ # Element matrix client
 windowrulev2 = opacity 0.94 0.86, class:^(gnome-disks|evince|wihotspot(-gui)?|org.gnome.baobab)$
