--- a/hypr/configs/Keybinds.conf
+++ b/hypr/configs/Keybinds.conf
@@ -21,6 +21,7 @@ bind = CTRL ALT, P, exec, $scriptsDir/Wlogout.sh
 # TODO: FEATURES / EXTRAS
 bind = $mainMod ALT, E, exec, $scriptsDir/RofiEmoji.sh # emoji
 bind = $mainMod ALT, L, exec, $scriptsDir/ChangeLayout.sh # Toggle Master or Dwindle Layout
+bind = $mainMod ALT, V, exec, cliphist list | tofi -c ~/.config/tofi/configV | cliphist decode | wl-copy
 # bind = $mainMod, H, exec, $scriptsDir/KeyHints.sh # Small help file
 # bind = $mainMod ALT, R, exec, $scriptsDir/Refresh.sh # Refresh waybar, swaync, rofi
 # bind = $mainMod, S, exec, $scriptsDir/RofiSearch.sh # Google search from Rofi
@@ -30,9 +31,9 @@ bind = $mainMod ALT, L, exec, $scriptsDir/ChangeLayout.sh # Toggle Master or Dwi
 # bind = $mainMod SHIFT, N, exec, swaync-client -t -sw # swayNC panel
 
 # TODO: FEATURES / EXTRAS (UserScripts)
+bind = $mainMod, W, exec, $scriptsDir/WallpaperSelect.sh # Select wallpaper to apply
 # bind = $mainMod, E, exec, $UserScripts/QuickEdit.sh # Quick Edit Hyprland Settings
 # bind = $mainMod SHIFT, M, exec, $UserScripts/RofiBeats.sh # online music
-# bind = $mainMod, W, exec, $UserScripts/WallpaperSelect.sh # Select wallpaper to apply
 # bind = $mainMod SHIFT, W, exec, $UserScripts/WallpaperEffects.sh # Wallpaper Effects by imagemagickWW
 # bind = CTRL ALT, W, exec, $UserScripts/WallpaperRandom.sh # Random wallpapers
 # bind = $mainMod ALT, O, exec, hyprctl setprop active opaque toggle #disable opacity to active window
