--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -1,7 +1,8 @@
 exec-once = hyprctl setcursor "Banana-Catppuccin-Mocha" 72 &
-# exec = gsettings set org.gnome.desktop.interface color-scheme "prefer-dark" &
+exec = gsettings set org.gnome.desktop.interface color-scheme "prefer-dark" &
 exec = gsettings set org.gnome.desktop.interface cursor-theme "Banana-Catppuccin-Mocha" &
 exec = gsettings set org.gnome.desktop.interface cursor-size 72 &
+exec = gsettings set org.gnome.desktop.default-applications.terminal exec 'kitty' &
 
 # exec-once = hypridle &
 
