--- a/hypr/UserConfigs/Monitors.conf
+++ b/hypr/UserConfigs/Monitors.conf
@@ -11,15 +11,15 @@
 # Monitors
 # NOTE: for normal sized screen
 # monitor = eDP-1, disable
-monitor = eDP-1, 1920x1080@60, 0x0, 1
-monitor = DP-2, preferred, auto-right, 1
+# monitor = eDP-1, 1920x1080@60, auto-right, 1
+# monitor = DP-2, preferred, 0x0, 1
 
 # NOTE: for the big ass screen on the reunion room
 # monitor = DP-2, 1920x1080@60, 0x0, 1
 # monitor = eDP-1, 1920x1080@60, 1920x0, 1
 
 # NOTE: Mirror samples
-# monitor=,preferred,auto,1,mirror,eDP-1
+monitor=,preferred,auto,1,mirror,eDP-1
 # monitor=DP-3,1920x1080@60,0x0,1,mirror,DP-2
 # monitor=HDMI-A-1,2560x1440@144,0x0,1,mirror,eDP-1
 
