hypr: some display config with hypr

--- a/hypr/UserConfigs/WindowRules.conf
+++ b/hypr/UserConfigs/WindowRules.conf
@@ -17,7 +17,7 @@ windowrulev2 = center, class:([Tt]hunar), title:(File Operation Progress)
 windowrulev2 = center, class:([Tt]hunar), title:(Confirm to replace files)
 windowrulev2 = center, title:^(ROG Control)$
 windowrulev2 = center, title:^(Keybindings)$  
-windowrulev2 = move 72% 7%,title:^(Picture-in-Picture)$ 
+# windowrulev2 = move 72% 7%,title:^(Picture-in-Picture)$ 
 # windowrulev2 = move 50% 50%, title:(Network Displays)
 #windowrulev2 = move 72% 7%,title:^(Firefox)$ 
 
@@ -68,7 +68,7 @@ windowrulev2 = float, title:(Kvantum Manager)
 windowrulev2 = float, class:^([Ss]team)$,title:^((?![Ss]team).*|[Ss]team [Ss]ettings)$
 # windowrulev2 = float, class:^([Qq]alculate-gtk)$
 windowrulev2 = float, class:^([Ff]erdium)$
-windowrulev2 = float, title:^(Picture-in-Picture)$
+# windowrulev2 = float, title:^(Picture-in-Picture)$
 # windowrulev2 = float, title:^(ROG Control)$
 windowrulev2 = tile, class:^(kitty)$
 #windowrulev2 = float, class:^([Ww]hatsapp-for-linux)$
@@ -117,12 +117,12 @@ windowrulev2 = size 70% 70%, class:^(evince|wihotspot(-gui)?)$
 windowrulev2 = size 60% 70%, class:^(file-roller|org.gnome.FileRoller)$
 windowrulev2 = size 60% 70%, class:^([Ww]hatsapp-for-linux)$
 windowrulev2 = size 60% 70%, class:^([Ff]erdium)$
-windowrulev2 = size 25% 25%, title:^(Picture-in-Picture)$
+# windowrulev2 = size 25% 25%, title:^(Picture-in-Picture)$
 windowrulev2 = size 60% 70%, title:^(ROG Control)$  
 #windowrulev2 = size 25% 25%, title:^(Firefox)$ 
 
 # windowrule v2 - pinning
-windowrulev2 = pin,title:^(Picture-in-Picture)$
+# windowrulev2 = pin,title:^(Picture-in-Picture)$
 #windowrulev2 = pin,title:^(Firefox)$ 
 
 #windowrulev2 = bordercolor rgb(EE4B55) rgb(880808), fullscreen:1
