nix: use unstable version of nixpkgs

--- a/hypr/UserConfigs/WindowRules.conf
+++ b/hypr/UserConfigs/WindowRules.conf
@@ -5,10 +5,10 @@
 #windowrule = workspace 6 silent,^(gamescope)$
 
 # windowrule Position
-windowrule = center,^(pavucontrol|org.pulseaudio.pavucontrol|com.saivert.pwvucontrol)
-windowrule = center,^(.blueman-manager-wrapped)
-windowrule = center,^([Ww]hatsapp-for-linux)$
-windowrule = center,^([Ff]erdium)$
+# windowrule = center,^(pavucontrol|org.pulseaudio.pavucontrol|com.saivert.pwvucontrol)
+# windowrule = center,^(.blueman-manager-wrapped)
+# windowrule = center,^([Ww]hatsapp-for-linux)$
+# windowrule = center,^([Ff]erdium)$
 
 # WINDOWRULE v2
 # windowrule v2 - position
@@ -62,13 +62,14 @@ windowrulev2 = float, class:^(gnome-system-monitor|org.gnome.SystemMonitor|io.mi
 windowrulev2 = float, class:^([Yy]ad)$ 
 windowrulev2 = float, class:^(wihotspot(-gui)?)$ # wifi hotspot
 windowrulev2 = float, class:^(evince)$ # document viewer
+windowrulev2 = float, class:^(Emulator)$ # Android Emulator
 windowrulev2 = float, class:^(file-roller|org.gnome.FileRoller)$ # archive manager
 windowrulev2 = float, class:^([Bb]aobab|org.gnome.[Bb]aobab)$ # Disk usage analyzer
 windowrulev2 = float, title:(Kvantum Manager)
 windowrulev2 = float, class:^([Ss]team)$,title:^((?![Ss]team).*|[Ss]team [Ss]ettings)$
 # windowrulev2 = float, class:^([Qq]alculate-gtk)$
 windowrulev2 = float, class:^([Ff]erdium)$
-# windowrulev2 = float, title:^(Picture-in-Picture)$
+windowrulev2 = float, title:^(Picture-in-Picture)$
 # windowrulev2 = float, title:^(ROG Control)$
 windowrulev2 = tile, class:^(kitty)$
 #windowrulev2 = float, class:^([Ww]hatsapp-for-linux)$
