--- a/hypr/UserConfigs/UserSettings.conf
+++ b/hypr/UserConfigs/UserSettings.conf
@@ -84,13 +84,13 @@ gestures {
 }
 
 
-group {
-  col.border_active = $color15
-
-	groupbar {
-		col.active = $color0
-  }
-}
+# group {
+#   col.border_active = $color15
+#
+# 	groupbar {
+# 		col.active = $color0
+#   }
+# }
 
 misc {
   # middle_click_paste = true
