btop: hide battery watts

--- a/btop/btop.conf
+++ b/btop/btop.conf
@@ -220,7 +220,7 @@ show_battery = True
 selected_battery = "Auto"
 
 #* Show power stats of battery next to charge indicator.
-show_battery_watts = True
+show_battery_watts = False
 
 #* Set loglevel for "~/.config/btop/btop.log" levels are: "ERROR" "WARNING" "INFO" "DEBUG".
 #* The level set includes all lower levels, i.e. "DEBUG" will show all logging info.
