--- a/hypr/UserConfigs/UserKeybinds.conf
+++ b/hypr/UserConfigs/UserKeybinds.conf
@@ -5,7 +5,7 @@
 
 $mainMod = SUPER
 $scriptsDir = $HOME/.config/hypr/scripts
-$UserScripts = $HOME/.config/hypr/UserScripts
+# $UserScripts = $HOME/.config/hypr/UserScripts
 
 $term = kitty
 $files = nautilus
@@ -39,6 +39,7 @@ bind = $mainMod, I, exec, $discord
 
 # User Added Keybinds
 bindn = $mainMod, SPACE, exec, $scriptsDir/SwitchKeyboardLayout.sh # Changing the keyboard layout
+# bindn = $mainMod, SPACE, exec, $scriptsDir/GithubRepo.sh # Clone github repo
 
 # For passthrough keyboard into a VM
 # bind = $mainMod ALT, P, submap, passthru
