--- a/hypr/UserConfigs/WindowRules.conf
+++ b/hypr/UserConfigs/WindowRules.conf
@@ -31,7 +31,9 @@ windowrulev2 = workspace 1, class:^([Tt]hunderbird)$
 windowrulev2 = workspace 2, class:^([Ff]irefox|org.mozilla.firefox|[Ff]irefox-esr)$
 windowrulev2 = workspace 2, class:^([Mm]icrosoft-edge(-stable|-beta|-dev|-unstable)?)$
 windowrulev2 = workspace 2, class:^([Gg]oogle-chrome(-beta|-dev|-unstable)?)$
-#windowrulev2 = workspace 3, class:^([Tt]hunar)$
+windowrulev2 = workspace 1, class:^(Alacritty|kitty|kitty-dropterm|ghostty)$ # Terminals
+windowrulev2 = workspace 2 silent, class:^(brave-browser(-beta|-dev)?)$
+# windowrulev2 = workspace 3, class:^([Tt]hunar)$
 # windowrulev2 = workspace 4, class:^(com.obsproject.Studio)$
 windowrulev2 = workspace 5, class:^([Ss]team)$
 windowrulev2 = workspace 5, class:^([Ll]utris)$
